--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,13 @@
+---
+import "../styles/global.css";
+import Header from "@/components/header.tsx";
+import Footer from "@/components/footer.astro";
+
+interface Props {
+  title?: string;
+}
+const { title = "usestore" } = Astro.props;
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,10 +15,14 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
+	<body class="min-h-screen flex flex-col">
+		<Header client:load />
+		<main class="flex-1">
+			<slot />
+		</main>
+		<Footer />
 	</body>
 </html>
 
